# aa

./: Report.tex  getCPUTime.h  main.cpp
hw01/: Report.tex
lab01/: getCPUTime.c  lab01.cpp  main.tex
lab01/files/: functional-test.csv
lab02/: .editorconfig  analysis.tex  bibliography.tex  compl.tex  conclusion.tex  design.tex  introduction.tex  main.cpp  main.tex  research.tex  technology.tex  title.tex
lab04/: output.docx
lab04/build-lab04-Desktop_Qt_MinGW_w64_64bit_MSYS2-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
lab04/build-lab04-Desktop_Qt_MinGW_w64_64bit_MSYS2-Debug/debug/: moc_mainwindow.cpp
lab04/lab04/: algorithm.cpp  algorithm.h  interface.cpp  interface.h  lab04.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab05/docs/: 51-biblio.bib  Makefile  gmon.out  report.tex
lab05/src/: car.cxx  car.h  conveyor.cxx  conveyor.h  logger.cxx  logger.h  main.cxx
lab06/: CMakeCache.txt  CMakeLists.txt  Makefile
lab07/: Report.tex
